--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
             <ul>
                 <li><a href="nav.html">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="aboutme.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="myflex.html">Services</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
