--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Flexbox Fun</title>
-<link rel="stylesheet" href="style.css">
+<title>My Page</title>
+<link rel="stylesheet" href="common_style.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">
-                Logo
-            </div>
+            <div class="logo">Navbar</div>
             <ul>
                 <li><a href="nav.html">Home</a></li>
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="myflex.html">Services</a></li>
+                <li><a href="myflex.html">Photo Dump</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        
+        <section class="flex-container">
+            <img src="" alt="A picture of me">
+            <h1>My name is Brandon Trama</h1>
+        </section>
+        <section class="flex-container">
+            <div class="flex-item red box">1</div>
+            <div class="flex-item blue box">2</div>
+            <div class="flex-item green box">3</div>
+            <div class="flex-item orange box">4</div>
+            <div class="flex-item purple box">5</div>
+        </section>
     </main>
 
     <footer>
