--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Navbar</div>
+            <div class="logo">BT</div>
             <ul>
                 <li><a href="nav.html">Home</a></li>
                 <li><a href="aboutme.html">About</a></li>
@@ -22,9 +22,13 @@
     </header>
 
     <main>
-        <section class="flex-container">
-            <img src="" alt="A picture of me">
-            <h1>My name is Brandon Trama</h1>
+        <section class="photo-container">
+            <div>
+            <img id="seniorphoto" src="seniorphoto.jpg" alt="A picture of me"></img>
+            </div>
+            <div>
+                <h1 id="photoheader">My name is Brandon Trama</h1>
+            </div>
         </section>
         <section class="flex-container">
             <div class="flex-item red box">1</div>
