Updated home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img id="seniorphoto" src="seniorphoto.jpg" alt="A picture of me"></img>
             </div>
             <div>
-                <h1 id="photoheader">My name is Brandon Trama</h1>
+                <h1 id="photoheader">my name is <strong>brandon trama</strong>.</h1>
             </div>
         </section>
         <section class="flex-container">
