Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -8,17 +8,20 @@
     </head>
     <body>
         <header>
-
+            <h1></h1>
         </header>
         <main>
             <nav>
-
+               <h2></h2>  
+               <p></p>
             </nav>
-            <article>
-
+            <article class="blog-heading">
+                <span>
+                    My recent  posts
+                </span>
             </article>
             <aside>
-
+                <p></p>
             </aside>
         </main>
         <footer>
