Created sample blog page

--- a/blog.html
+++ b/blog.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog</title>
-        <link rel="stylesheet" href="holygrail.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+    <link rel="stylesheet" href="blogstyle.css">
+</head>
+<body>
+    <div class="container">
+        <nav>
+            <div class="logo"><em>BT</em></div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutme.html">About</a></li>
+                <li><a href="myflex.html">Photo Dump</a></li>
+            </ul>
+        </nav>
         <header>
-            <h1></h1>
+            <h1>My First Blog</h1>
         </header>
-        <main>
-            <nav>
-               <h2></h2>  
-               <p></p>
-            </nav>
-            <article class="blog-heading">
-                <span>
-                    My recent  posts
-                </span>
-            </article>
-            <aside>
-                <p></p>
+        <div class="main-content">
+            <aside class="sidebar">
+                <h2>Sidebar</h2>
+                <p>Some sidebar content goes here...</p>
             </aside>
-        </main>
+            <div class="blog=content">
+                <article>
+                    <h2>My first blog..</h2>
+                    <p>Hello words words words hello.</p>
+                </article>
+            </div>
+        </div>
         <footer>
-
+            <p>hello</p>
         </footer>
-    </body>
-    
+    </div>
+</body>
 </html>
