Updated home page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <header>
         <nav>
-            <div class="logo">BT</div>
+            <div class="logo"><em>BT</em></div>
             <ul>
-                <li><a href="nav.html">Home</a></li>
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="myflex.html">Photo Dump</a></li>
@@ -24,9 +23,7 @@
         <section class="photo-container">
             <div>
             <img id="seniorphoto" src="seniorphoto.jpg" alt="A picture of me"></img>
-            </div>
-            <div>
-                <h1 id="photoheader">my name is <strong>brandon trama</strong>.</h1>
+            <h1 id="photoheader">my name is ‎<span class="underline">brandon trama</span>.</h1>
             </div>
         </section>
         <section class="flex-container">
