Made my first blog post

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About</a></li>
-                <li><a href="myflex.html">Photo Dump</a></li>
+                <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
         </nav>
         <header>
@@ -22,17 +22,17 @@
         <div class="main-content">
             <aside class="sidebar">
                 <h2>Sidebar</h2>
-                <p>Some sidebar content goes here...</p>
+                <p>b</p>
             </aside>
             <div class="blog=content">
                 <article>
                     <h2>My first blog..</h2>
-                    <p>Hello words words words hello.</p>
+                    <p>Making websites can be hard.</p>
                 </article>
             </div>
         </div>
         <footer>
-            <p>hello</p>
+            <p>psst, down here</p>
         </footer>
     </div>
 </body>
