Added photo dump link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="myflex.html">Photo Dump</a></li>
+                <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
         </nav>
     </header>
