Rearranged navbar tabs

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
             <div class="logo"><em>BT</em></div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutme.html">About</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
         </nav>
