--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo"><em>BT</em></div>
             <ul>
-                <li><a href="aboutme.html">About</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
