--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="blogstyle.css">
+    <link rel="stylesheet" href="common_style.css">
+    <style>
+        body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    line-height: 1.6;
+    flex-direction: column;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+header {
+    margin-top: 1px;
+}
+header, footer {
+    background: #333;
+    color: #fff;
+    padding: 10px 20px;
+}
+.main-content {
+    flex-grow: 1;
+    display: flex;
+}
+.sidebar {
+    flex: 0 0 0px;
+    background: #f4f4f4;
+    padding: 20px;
+}
+.blog-content {
+    flex-grow: 1;
+    padding: 20px;
+}
+footer {
+    margin-top: auto;
+}
+header, footer, article, nav, aside {
+    padding: 1em;
+}
+@media (max-width: 576px) {
+    .container {
+        flex-direction: column;
+    }
+    nav, .sidebar {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 20vw;
+    }
+    .sidebar {
+        flex-shrink: 1;
+    }
+}
+    </style>
 </head>
 <body>
     <div class="container">
