--- a/blog.html
+++ b/blog.html
@@ -52,8 +52,9 @@
         <nav>
             <div class="logo"><em>BT</em></div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
+                <li><a id="home" href="index.html">Home</a></li>
+                <li><a id="aboutme" href="aboutme.html">About Me</a></li>
+                <li><a id="blog" href="blog.html">Blog</a></li>
                 <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
         </nav>
