--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class="photo-container">
             <div>
-            <img id="seniorphoto" src="seniorphoto.jpg" alt="A picture of me"></img>
+            <img id="seniorphoto" src="/photos/seniorphoto.jpg" alt="A picture of me"></img>
             <h1 id="photoheader">my name is ‎<span class="underline">brandon trama</span>.</h1>
             </div>
         </section>
