--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="common_style.css">
     <style>
         #aboutmeheader {
+            border-radius: 20px;
             margin-top: 10px;
-            background: linear-gradient(-45deg, #ffffff, #000000, #6600ff, #000000);
+            background: linear-gradient(-45deg, #6600ff, #000000, #6600ff, #000000);
             background-size: 400% 400%;
 	        animation: gradient 15s ease infinite; 
         }
@@ -18,6 +19,49 @@
             transition: transform 0.5s;
         }
         #aboutmeheader h1:hover {
+            transform: scale(1.05);
+            transition: transform 0.5s;
+        }
+        .games {
+            display: flex;
+            border-radius: 10px;
+            justify-content: center;
+            background: gray;
+            flex-direction: column;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        .games header {
+            display: flex;
+            justify-content: center;
+            padding-left: 10px;
+            padding-right: 10px;
+            border-radius: 20px;
+            margin-top: 10px;
+            background: linear-gradient(-45deg, #6600ff, #000000, #6600ff, #000000);
+            background-size: 400% 400%;
+	        animation: gradient 15s ease infinite;
+        }
+        .games h2 {
+            color: white;
+            padding-left: 95px;
+            padding-right: 95px;
+        }
+        .games div {
+            display: flex;
+            justify-content: space-evenly;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            flex-wrap: wrap;
+        }
+        .games div img {
+            height: 250px;
+            width: 175px;
+            transform: scale(1.0);
+            transition: transform 0.5s;
+            border-radius: 10px;
+        }
+        .games div img:hover {
             transform: scale(1.05);
             transition: transform 0.5s;
         }
@@ -43,12 +87,26 @@
             </header>
             <main>
                 <section>
-                    <p>
-                        I go to Siena College majoring in Computer Science. I also play the violin and like to play video games. I have a cat named Elsa, and pictures of her are in the photo dump linked at the top :)
-                    </p>
-                    <p>
-                        
-                    </p>
+                    <h3>
+                        I go to Siena College majoring in Computer Science. I also play the violin and like to play video games. I have a cat named Elsa, and pictures of her are in the photo dump linked in the navbar at the top :)
+                    </h3>
+                </section>
+                <section class="games">
+                    <header>
+                        <h2>Some of my all time favorite games...</h2>
+                    </header>
+                    <div>
+                        <img src="photos/games/bo2.png" alt="black ops 2"></img>
+                        <img src="photos/games/r6s.png" alt="black ops 2"></img>
+                        <img src="photos/games/gtao.webp" alt="black ops 2"></img>
+                        <img src="photos/games/rocketleague.jpeg" alt="black ops 2"></img>
+                    </div>
+                    <div>
+                        <img src="photos/games/tf|2.jpeg" alt="titanfall 2"></img>
+                        <img src="photos/games/fortnite.jpeg" alt="titanfall 2"></img>
+                        <img src="photos/games/portal2.jpeg" alt="titanfall 2"></img>
+                        <img src="photos/games/minecraft.webp" alt="titanfall 2"></img>
+                    </div>
                 </section>
             </main>
             <footer>
