--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Page</title>
 <link rel="stylesheet" href="common_style.css">
-
+<style>
+    .photo-container {
+        background: linear-gradient(-45deg, #ffffff, #000000, #ffffff, #000000);
+            background-size: 400% 400%;
+	        animation: gradient 15s ease infinite;
+    }
+    #photoheader {
+        color: white;
+    }
+    .flex-container {
+        margin-top: 5px;
+        border-radius: 30px;
+    }
+</style>
 </head>
 <body>
     <header>
