Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <nav style="border-radius: 0px">
             <div class="logo"><em>BT</em></div>
             <ul>
                 <li><a id="home" href="index.html">Home</a></li>
@@ -93,12 +93,12 @@
         <div class="main-content">
             <aside class="sidebar">
                 <h2>Sidebar</h2>
-                <p>b</p>
+                <p>hello, i'm a sidebar</p>
             </aside>
             <div class="blog=content">
                 <article>
                     <h2>My first blog..</h2>
-                    <p>Making websites can be hard.</p>
+                    <p>Making websites can be hard. And sometimes making websites can be easy.</p>
                 </article>
             </div>
         </div>
