Fixed errors according to the W3C validator

--- a/aboutme.html
+++ b/aboutme.html
@@ -108,16 +108,16 @@
                         <h2 style="color: white;">Some of my all time favorite games...</h2>
                     </header>
                     <div>
-                        <img src="photos/games/bo2.png" alt="black ops 2"></img>
-                        <img src="photos/games/r6s.png" alt="black ops 2"></img>
-                        <img src="photos/games/gtao.webp" alt="black ops 2"></img>
-                        <img src="photos/games/rocketleague.jpeg" alt="black ops 2"></img>
+                        <img src="photos/games/bo2.png" alt="black ops 2">
+                        <img src="photos/games/r6s.png" alt="black ops 2">
+                        <img src="photos/games/gtao.webp" alt="black ops 2">
+                        <img src="photos/games/rocketleague.jpeg" alt="black ops 2">
                     </div>
                     <div>
-                        <img src="photos/games/tf|2.jpeg" alt="titanfall 2"></img>
-                        <img src="photos/games/fortnite.jpeg" alt="titanfall 2"></img>
-                        <img src="photos/games/portal2.jpeg" alt="titanfall 2"></img>
-                        <img src="photos/games/minecraft.webp" alt="titanfall 2"></img>
+                        <img src="photos/games/tf2.jpeg" alt="titanfall 2">
+                        <img src="photos/games/fortnite.jpeg" alt="titanfall 2">
+                        <img src="photos/games/portal2.jpeg" alt="titanfall 2">
+                        <img src="photos/games/minecraft.webp" alt="titanfall 2">
                     </div>
                 </section>
             </main>
