--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         margin-top: 10px;
         justify-content: center;
         flex-direction: column;
-        flex-grow: 100%;
     }
     .socials-container div {
         display: flex;
@@ -69,7 +68,7 @@
     <main>
         <section class="photo-container">
             <div>
-            <img id="seniorphoto" src="/photos/misc/seniorphoto.jpg" alt="A picture of me"></img>
+            <img id="seniorphoto" src="/photos/misc/seniorphoto.jpg" alt="A picture of me">
             <h1 id="photoheader">my name is ‎<span class="underline">brandon trama</span>.</h1>
             </div>
         </section>
@@ -79,13 +78,13 @@
             </div>
             <div class="socials">
                 <a href="https://github.com/brandontrama">
-                    <img src="photos/socials/githublogo.png">
+                    <img src="photos/socials/githublogo.png" alt="github">
                 </a>
                 <a href="mailto:trama.brandon@gmail.com">
-                    <img src="photos/socials/gmaillogo.png" alt="gmail" style="width: 80px;"></img>
+                    <img src="photos/socials/gmaillogo.png" alt="gmail" style="width: 80px;">
                 </a>
                 <a href="https://www.linkedin.com/in/brandon-trama-545330225">
-                    <img src="photos/socials/linkedinlogo.png" alt="linkedin"></img>
+                    <img src="photos/socials/linkedinlogo.png" alt="linkedin">
                 </a>
             </div>
         </section>
