--- a/aboutme.html
+++ b/aboutme.html
@@ -89,7 +89,7 @@
                 <div class="logo"><em>BT</em></div>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a class="active" href="aboutme.html">About Me</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
                 </ul>
