--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
             <ul>
                 <li><a id="home" href="index.html">Home</a></li>
                 <li><a id="aboutme" href="aboutme.html">About Me</a></li>
-                <li><a id="blog" href="blog.html">Blog</a></li>
+                <li><a class="active" id="blog" href="blog.html">Blog</a></li>
                 <li><a href="https://bento.me/brandontrama">Photo Dump</a></li>
             </ul>
         </nav>
